--- a/stylesheet.css
+++ b/stylesheet.css
@@ -147,13 +147,11 @@ img{
 }
 
 body {
-    background-image: url(img/stående_juletræ.png);
-  background-position: center center;
-  
-  background-repeat: no-repeat;
-
-  background-size: cover;
+ background-image: url(img/stående_juletræ.png);
+ background-position: center center;
+  background-size:325px;
   min-height: 77vh
+  
 }
 
 html {
@@ -174,6 +172,7 @@ h1 {
     grid-template-columns: 1fr 1fr 1fr 1fr;
     margin-top: 409px;
     position: fixed;
+    margin-right: 10px;
 }
 
   .præmie_boks {
@@ -187,6 +186,7 @@ h1 {
     margin: 5%;
     font-weight: bold;
     color: #000000;
+    margin-top: 40px;
   }
 
   .præmie {
