--- a/stylesheet.css
+++ b/stylesheet.css
@@ -324,6 +324,7 @@ margin: 0px;
 }
 
 .tekst_klarparat{
+    font-family: lemonmilk;
     text-align: center;
 }
 
@@ -337,9 +338,104 @@ margin: 0px;
     background-size: cover;
     height: 100%;
     overflow: hidden;
-  }
+}
+
+.pakken {
+    margin-top: 350px;
+    margin-left: 236px;
+
+}
+  
 /*lav ønskeliste*/
 
 .qrjagt {
+    background: none;
     
+}
+
+.hovedetekst {
+    text-align: center;
+    margin-top: 49px;
+}
+
+.underoverskrift {
+    text-align: center;
+}
+
+.qrkode {
+    margin-left: 71px;
+    margin-top: 20px;
+    width: 215px;
+    margin-bottom: 10px;
+}
+
+.søgning {
+    font-family: lemonmilk;
+    text-align: center;
+    background-color: #056DB5;
+    border-radius: 17px;
+    color: white;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 65px;
+    width: 215px;
+    margin-left: 72px;
+    margin-top: 32px;
+}
+
+.pil {
+    width: 95px;
+    margin-left: 192px;
+}
+
+.pil_tekst {
+    margin-top: -36px;
+    margin-left: 193px;
+    font-size: 13px;
+    color: white;
+}
+
+/* fundet 15 pakker */ 
+
+.fundet_boks {
+    margin: 30px;
+    background-color: #ffffff;
+    border: 1px solid black;
+    opacity: 0.8;
+    margin: 5%;
+    font-weight: bold;
+    color: #000000;
+    margin-top: 95px;
+  }
+
+
+  .tilykke {
+      font-family: lemonmilk;
+      text-align: center;
+      font-size: 40px;
+      margin-top: none;
+  }
+
+  .fundet {
+      font-family:lemonmilk;
+      text-align: center;
+      font-size: 20px;
+      padding: 1px;
+  }
+
+  .logo_br {
+      width: 150px;
+      margin-left: 93px;
+  }
+
+  .pil_færdig {
+      width: 101px;
+      margin-left: 250px;
+  }
+    .færdig {
+        margin-top: -37px;
+        margin-left: 264px;
+        color: white;
 }
