--- a/stylesheet.css
+++ b/stylesheet.css
@@ -482,6 +482,22 @@ margin-left: 82px;
  height: 100%;
  width: 100%;
 margin: 0px;
+position: fixed;
+font-family: lemonmilk;
+}
+
+.klarparat1{
+    text-align: center;
+    font-size: 30px;
+    margin: 0;
+    margin-bottom: 8px;
+}
+
+.klarparat2{
+    text-align: center;
+    font-size: 30px;
+    margin-top: 15px;
+    margin: 0;
 }
 
 .tekst_klarparat{
@@ -502,8 +518,8 @@ margin: 0px;
 }
 
 .pakken {
-    margin-top: 350px;
-    margin-left: 236px;
+    margin-top: 466px;
+    margin-left: 250px;
 
 }
   
@@ -648,6 +664,7 @@ background: url(img/fototilfoto.jpg) no-repeat center center fixed;
     width: 500px;
     max-width: 100%;
     grid-template-columns: repeat(3, 1fr);
+    position: fixed;
     
 }
 
