--- a/stylesheet.css
+++ b/stylesheet.css
@@ -550,10 +550,10 @@ margin: 0px;
     }
     
     .pil_tekst {
-        margin-top: -36px;
-        margin-left: 195px;
+        margin-top: -35px;
+        margin-left: 196px;
         font-size: 13px;
-        color: white;
+        color: black;
     }
     
     /* fundet 15 pakker */ 
